2004-08-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added NetworkManager to extras.

2004-08-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added netapplet to extras.

2004-08-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed radioactive. Maintainer
	says it's dead.

2004-08-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved the accepted proposed modules
	into desktop section. Moved gnome-keyring-manager back to extras.
	All according to the new modules decision presented by markmc on
	d-d-l.

2004-08-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gwget to extras.

2004-08-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-bluetooth and
	phonemgr to extras.

2004-08-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: fixed gdm2 pot file name.

2004-07-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gcalctool has been branched.

2004-07-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added notifier to extras.

2004-07-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added divifund to extras.

2004-07-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added nautilus-vcs to extras.

2004-07-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-doc-utils to extras.

2004-07-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgtop has been silently
	branched.

2004-07-22  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Remove magicdev. Its development is
	discontinued.

2004-07-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fix broken pot file name for
	evolution-exchange.

2004-07-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fix broken pot file name for gdm2.
