@@ -379,7 +379,7 @@
       <component name="evolution" dir="evolution" group="desktop">
 	<podir dir="po"/>
 	<potname name="evolution-1.5.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-8"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -401,7 +401,7 @@
       <component name="evolution-data-server" dir="evolution-data-server" group="desktop">
 	<podir dir="po"/>
 	<potname name="evolution-data-server-1.5.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-8"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -507,7 +507,7 @@
       <component name="gal" dir="gal" group="desktop">
 	<podir dir="po"/>
 	<potname name="gal-2.2.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-8"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -1691,7 +1691,7 @@
       <component name="gtkhtml" dir="gtkhtml" group="desktop">
         <podir dir="po"/>
         <potname name="gtkhtml-3.1.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-8"/>
         <regenerate/>
         <download/>
       </component>
