@@ -1,3 +1,8 @@
+2004-07-28  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: gal, gtkhtml, evolution-data-server
+	and evolution have been branched.
+
 2004-08-27  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added NetworkManager to extras.
